--- a/polybar/config
+++ b/polybar/config
@@ -12,40 +12,41 @@
 ; 
 
 [colors]
-grey = ${xrdb:color0:#222}
-orange = ${xrdb:color1:#222}
+black = ${xrdb:color0:#222}
+red = ${xrdb:color1:#222}
 green = ${xrdb:color2:#222}
 yellow = ${xrdb:color3:#222}
-cyan = ${xrdb:color4:#222}
+blue = ${xrdb:color4:#222}
 magenta = ${xrdb:color5:#222}
-blue = ${xrdb:color6:#222}
+cyan = ${xrdb:color6:#222}
 white = ${xrdb:color7:#222}
 
-light-grey = ${xrdb:color8:#222}
+light-black = ${xrdb:color8:#222}
 light-orange = ${xrdb:color9:#222}
 light-green = ${xrdb:color10:#222}
 light-yellow = ${xrdb:color11:#222}
-light-cyan = ${xrdb:color12:#222}
+light-blue = ${xrdb:color12:#222}
 light-magenta = ${xrdb:color13:#222}
-light-blue = ${xrdb:color14:#222}
+light-cyan = ${xrdb:color14:#222}
 light-white = ${xrdb:color15:#222}
 
-background = ${colors.grey}
-background-alt = ${colors.light-grey}
-foreground = ${colors.light-white}
+# background = #00 
+background = ${colors.black}
+background-alt = ${colors.black}
+foreground = ${colors.black}
 foreground-alt = ${colors.white}
-primary = ${colors.cyan}
-secondary = ${colors.blue}
+primary = ${colors.blue}
+secondary = ${colors.green}
 alert = ${colors.magenta}
 
 [bar/example]
 monitor = ${env:MONITOR:}
 width = 100%
-dpi = 64
+dpi = 48
 height = 30
 ;offset-x = 1%
 ;offset-y = 1%
-radius = 3.0
+radius = 5.0
 fixed-center = true
 bottom = false
 
@@ -64,7 +65,8 @@ padding-right = 0
 module-margin-left = 1
 module-margin-right = 1
 
-font-0 = "Iosevka Fixed Extended:style=bold:pixelsize=22;4"
+; font-0 = "Iosevka Fixed Extended:style=bold:pixelsize=22;4"
+font-0 = "Fira Code Medium:style=bold:pixelsize=22;4"
 font-1 = "unifont:style=Regular:antialias=false:pixelsize=22;7"
 font-2 = "Siji:pixelsize=22;5"
 font-3 = "FontAwesome:pixelsize=20:style=Regular;4"
@@ -72,12 +74,12 @@ font-4 = "Icons:pixelsize=20:style=Regular"
 
 modules-left = i3
 modules-center = date 
-modules-right = filesystem memory cpu
+modules-right = filesystem memory cpu Separator
 
 tray-position = right
-tray-padding = 15
-;tray-transparent = true
-;tray-background = #0063ff
+tray-padding = 20
+tray-transparent = true
+; tray-background = ${colors.yellow}
 tray-maxsize = 1000
 
 ;wm-restack = bspwm
@@ -93,7 +95,7 @@ tray-maxsize = 1000
 
 [module/Separator]
 type = custom/text
-content = |
+content = " "
 
 ; arrows    
 [module/LeftArrow]
@@ -128,17 +130,33 @@ label-indicator-underline = ${colors.secondary}
 type = internal/fs
 interval = 25
 
-format-background = ${colors.blue}
-format-foreground = ${colors.foreground}
-
 mount-0 = /
 
-label-mounted = " %mountpoint%: %percentage_used%%"
+label-mounted = "  %mountpoint%: %percentage_used%% "
 label-unmounted = %mountpoint% not mounted
+
+format-mounted-background = ${colors.cyan}
+format-mounted-foreground = ${colors.foreground}
 
 [module/i3]
 type = internal/i3
 pin-workspaces = true
+
+label-focused = %index%
+label-focused-padding = 1
+label-focused-background = ${colors.primary}
+
+label-unfocused = %index%
+label-unfocused-padding = 1
+label-unfocused-background = ${colors.secondary}
+
+label-visible = %index%
+label-visible-padding = 1
+label-visible-background = ${colors.secondary}
+
+label-urgent = %index%
+label-urgent-background = ${colors.red}
+label-urgent-padding = 1
 
 [module/bspwm]
 type = internal/bspwm
@@ -228,7 +246,7 @@ time-alt = %H:%M:%S
 
 # format-prefix = 
 format-prefix-foreground = ${colors.foreground-alt}
-format-background = ${colors.cyan}
+format-background = ${colors.blue}
 format-foreground = ${colors.foreground}
 
 label = %date% %time%
