--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -1,5 +1,6 @@
 opacity-rule = [
   "80:class_g = 'Alacritty'",
+  "80:class_g = 'kitty'",
   "80:class_g = 'Signal'",
   "80:class_g = 'discord'",
   "40:class_g = 'i3lock'",
