--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,7 +1,7 @@
 # set to 256 colours, xterm
 set -g default-terminal "screen-256color"
 # set default shell
-set-option -g default-shell /usr/bin/fish
+set-option -g default-shell /usr/local/bin/fish
 
 # unbind C-b and set to C-a
 unbind C-b
@@ -18,7 +18,7 @@ unbind '"'
 unbind %
 
 # reload config with 'r'
-bind r source-file ~/.tmux.conf \; display-message "Configuration reloaded."
+bind r source-file ~/.config/tmux/tmux.conf \; display-message "Configuration reloaded."
 bind-key [ copy-mode
 bind-key ] paste-buffer
 
@@ -42,24 +42,27 @@ bind b break-pane
 # set -g mouse-select-window on
 # set -g mouse-select-pane on
 # set -g mouse-resize-pan on
-set -g mouse off
+set -g mouse on
 
 # colourisation of bars
-set -g pane-active-border-style bg=brightblack,fg=brightblack
-set -g pane-border-style bg=default,fg=brightblack
-# set -g pane-active-border-fg fg=red
+set -g pane-active-border-style bg=black,fg=blue
+set -g pane-border-style bg=colour236,fg=black
+
+# active / inactive backgrounds
+set -g window-style fg=default,bg=colour236
+set -g window-active-style fg=colour250,bg=black
 
 # status bar design
 # set -g status-bg brightblack
 set -g status-bg black
 # set -g status-fg red
-setw -g window-status-current-style fg=white,bg=blue
-setw -g window-status-current-format ' #I#[fg=white]:#[fg=white]#W#[fg=white]#F #[bg=black,bold]'
+setw -g window-status-current-style fg=black,bg=blue,bold
+setw -g window-status-current-format ' #I#[fg=black]:#[fg=black]#W#[fg=black]#F #[bg=black,bold]'
 
-setw -g window-status-style fg=red,bg=cyan,none
+setw -g window-status-style fg=red,bg=#555555,none
 setw -g window-status-format ' #[fg=black]#I#[fg=black]:#[fg=black]#W#[fg=black]#F '
 
-set -g status-left-style bold
-set -g status-left '#[fg=white,bg=red,bold] #H #[bg=black] '
-set -g status-right '#[fg=black,bg=brightgreen,bold] Pane: #P | %H:%M:%S '
+set -g status-left-style none
+set -g status-left '#[fg=black,bg=red] #H #[bg=black] '
+set -g status-right '#[fg=black,bg=brightgreen] Pane: #P | %H:%M:%S '
 
