--- a/polybar/config
+++ b/polybar/config
@@ -46,7 +46,7 @@ dpi = 48
 height = 30
 ;offset-x = 1%
 ;offset-y = 1%
-radius = 5.0
+;radius = 5.0
 fixed-center = true
 bottom = false
 
@@ -142,7 +142,7 @@ format-mounted-foreground = ${colors.foreground}
 type = internal/i3
 pin-workspaces = true
 
-label-focused = %index%
+label-focused = "%index%"
 label-focused-padding = 1
 label-focused-background = ${colors.primary}
 
