Adding spacing for tmux left-status

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -64,5 +64,6 @@ setw -g window-status-format ' #[fg=black]#I#[fg=black]:#[fg=black]#W#[fg=black]
 
 set -g status-left-style none
 set -g status-left '#[fg=black,bg=red] #H #[bg=black] '
+set -g status-left-length 50
 set -g status-right '#[fg=black,bg=brightgreen] Pane: #P | %H:%M:%S '
 
