Using bass with fish-shell, more config updates

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,6 +1,7 @@
 # set to 256 colours, xterm
 set -g default-terminal "screen-256color"
 # set default shell
+# fish
 set-option -g default-shell /usr/local/bin/fish
 
 # unbind C-b and set to C-a
