Fixing nvim config to play nicely with tmux inactive windows

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -50,8 +50,8 @@ set -g pane-active-border-style bg=black,fg=blue
 set -g pane-border-style bg=colour236,fg=black
 
 # active / inactive backgrounds
-set -g window-style fg=default,bg=colour236
-set -g window-active-style fg=colour250,bg=black
+set -g window-style fg=colour223,bg=colour236
+set -g window-active-style fg=colour223,bg=black
 
 # status bar design
 # set -g status-bg brightblack
