--- a/alacritty/template.alacritty.yml
+++ b/alacritty/template.alacritty.yml
@@ -13,6 +13,14 @@ font:
     family: Fira Code
     style: Italic
 
+  size: 16
+
+shell:
+  program: /usr/local/bin/fish
+  args:
+    - '-c'
+    - 'tmux'
+
 env:
   TERM: xterm-256color
 
@@ -33,7 +41,7 @@ colors:
   # Default colours
   primary:
     background: HEX_BLACK
-    foreground: HEX_BRIGHT_BLACK
+    foreground: HEX_GRAY
 
   # Colors that should be used to draw the terminal cursor. If these are unset,
   # the cursor colour will be the inverse of the cell colour.
@@ -55,7 +63,7 @@ colors:
 
   # Bright colors
   bright:
-    black:   HEX_BRIGHT_BLACK
+    black:   HEX_BLACK
     red:     HEX_RED
     green:   HEX_GREEN
     yellow:  HEX_YELLOW
