--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -1,4 +1,5 @@
 {
   "javascript.suggest.autoImports": true, 
-  "typescript.suggest.autoImports": true
+  "typescript.suggest.autoImports": true,
+  "coc.preferences.jumpCommand": "tab drop"
 }
