--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,5 +1,6 @@
 # set to 256 colours, xterm
-set -g default-terminal "screen-256color"
+set -g default-terminal "xterm-256color"
+set-option -ga terminal-overrides ",xterm-256color:Tc"
 # set default shell
 # fish
 set-option -g default-shell /usr/local/bin/fish
@@ -45,26 +46,41 @@ bind b break-pane
 # set -g mouse-resize-pan on
 set -g mouse on
 
+# --> Catppuccin (Mocha)
+thm_bg="#1e1e2e"
+thm_fg="#cdd6f4"
+thm_cyan="#89dceb"
+thm_black="#181825"
+thm_gray="#313244"
+thm_magenta="#cba6f7"
+thm_pink="#f5c2e7"
+thm_red="#f38ba8"
+thm_green="#a6e3a1"
+thm_yellow="#f9e2af"
+thm_blue="#89b4fa"
+thm_orange="#fab387"
+thm_black4="#585b70"
+
 # colourisation of bars
-set -g pane-active-border-style bg=black,fg=blue
-set -g pane-border-style bg=colour236,fg=black
+set -g pane-active-border-style fg=$thm_blue
+set -g pane-border-style fg=$thm_gray
 
 # active / inactive backgrounds
-set -g window-style fg=default,bg=colour236
-set -g window-active-style fg=default,bg=black
+# set -g window-style fg=default
+# set -g window-active-style fg=default
 
 # status bar design
 # set -g status-bg brightblack
-set -g status-bg black
+set -g status-style bg=default
 # set -g status-fg red
-setw -g window-status-current-style fg=black,bg=blue,bold
-setw -g window-status-current-format ' #I#[fg=black]:#[fg=black]#W#[fg=black]#F #[bg=black,bold]'
+# setw -g window-status-current-style fg=black,bg=blue,bold
+setw -g window-status-current-format "#[fg=$thm_bg,bg=$thm_cyan,bold] #I #[fg=$thm_fg,bg=$thm_bg] #W #F "
 
-setw -g window-status-style fg=red,bg=#555555,none
-setw -g window-status-format ' #[fg=black]#I#[fg=black]:#[fg=black]#W#[fg=black]#F '
+# setw -g window-status-style fg=red,bg=#555555,none
+setw -g window-status-format "#[fg=$thm_gray,bg=$thm_black4] #I #[fg=$thm_gray,bg=$thm_black] #W #F "
 
 set -g status-left-style none
-set -g status-left '#[fg=black,bg=red] #H #[bg=black] '
+set -g status-left "#[fg=$thm_bg,bg=$thm_red] #H #[bg=default] "
 set -g status-left-length 50
-set -g status-right '#[fg=black,bg=brightgreen] Pane: #P | %H:%M:%S '
+set -g status-right "#[fg=$thm_green,bg=$thm_gray] #P #[fg=$thm_bg,bg=$thm_green] %H:%M:%S "
 
