--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,6 +1,6 @@
 # set to 256 colours, xterm
 set -g default-terminal "xterm-256color"
-set-option -ga terminal-overrides ",xterm-256color:Tc"
+set-option -ga terminal-overrides ";alacritty; xterm-256color:Tc"
 # set default shell
 # fish
 set-option -g default-shell /usr/local/bin/fish
@@ -47,19 +47,34 @@ bind b break-pane
 set -g mouse on
 
 # --> Catppuccin (Mocha)
-thm_bg="#1e1e2e"
-thm_fg="#cdd6f4"
-thm_cyan="#89dceb"
-thm_black="#181825"
-thm_gray="#313244"
-thm_magenta="#cba6f7"
-thm_pink="#f5c2e7"
-thm_red="#f38ba8"
-thm_green="#a6e3a1"
-thm_yellow="#f9e2af"
-thm_blue="#89b4fa"
-thm_orange="#fab387"
-thm_black4="#585b70"
+# thm_bg="#1e1e2e"
+# thm_fg="#cdd6f4"
+# thm_cyan="#89dceb"
+# thm_black="#181825"
+# thm_gray="#313244"
+# thm_magenta="#cba6f7"
+# thm_pink="#f5c2e7"
+# thm_red="#f38ba8"
+# thm_green="#a6e3a1"
+# thm_yellow="#f9e2af"
+# thm_blue="#89b4fa"
+# thm_orange="#fab387"
+# thm_black4="#585b70"
+
+# gruvbox
+thm_bg="#282828"
+thm_fg="#ebdbb2"
+thm_cyan="#689d6a"
+thm_black="#282828"
+thm_gray="#928374"
+thm_magenta="#b16286"
+thm_pink="#d3869b"
+thm_red="#cc241d"
+thm_green="#98971a"
+thm_yellow="#d79921"
+thm_blue="#458588"
+thm_orange="#d65d0e"
+thm_black4="#1d2021"
 
 # colourisation of bars
 set -g pane-active-border-style fg=$thm_blue
@@ -74,7 +89,7 @@ set -g pane-border-style fg=$thm_gray
 set -g status-style bg=default
 # set -g status-fg red
 # setw -g window-status-current-style fg=black,bg=blue,bold
-setw -g window-status-current-format "#[fg=$thm_bg,bg=$thm_cyan,bold] #I #[fg=$thm_fg,bg=$thm_bg] #W #F "
+setw -g window-status-current-format "#[fg=$thm_bg,bg=$thm_blue,bold] #I #[fg=$thm_fg,bg=$thm_bg] #W #F "
 
 # setw -g window-status-style fg=red,bg=#555555,none
 setw -g window-status-format "#[fg=$thm_gray,bg=$thm_black4] #I #[fg=$thm_gray,bg=$thm_black] #W #F "
@@ -82,5 +97,5 @@ setw -g window-status-format "#[fg=$thm_gray,bg=$thm_black4] #I #[fg=$thm_gray,b
 set -g status-left-style none
 set -g status-left "#[fg=$thm_bg,bg=$thm_red] #H #[bg=default] "
 set -g status-left-length 50
-set -g status-right "#[fg=$thm_green,bg=$thm_gray] #P #[fg=$thm_bg,bg=$thm_green] %H:%M:%S "
+set -g status-right "#[fg=$thm_bg,bg=$thm_gray] #P #[fg=$thm_bg,bg=$thm_green] %H:%M:%S "
 
