--- a/i3/config
+++ b/i3/config
@@ -17,7 +17,8 @@ set $mod Mod1
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:Fira Code Medium 10
+# font pango:Fira Code Medium 10
+font pango:JetBrainsMono Nerd Font Mono 18
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -34,8 +35,10 @@ font pango:Fira Code Medium 10
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+shift+Return split v exec kitty tmux
-bindsym $mod+Return split h exec kitty tmux
+# bindsym $mod+shift+Return split v exec kitty tmux
+bindsym $mod+shift+Return split v exec alacritty
+# bindsym $mod+Return split h exec kitty tmux
+bindsym $mod+Return split h exec alacritty
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -131,12 +134,6 @@ bindsym $mod+r mode "resize"
 bindsym $mod+z exec "web"
 bindsym $mod+Shift+t exec "i3lock --ignore-empty-password --tiling --color=000000"
 
-# workspace selection
-bindsym $mod+1 workspace $WS1
-bindsym $mod+2 workspace $WS2
-bindsym $mod+3 workspace $WS3
-bindsym $mod+4 workspace $WS4
-
 # dual monitor setup
 # set $mode_primary_screen_select Primary [1] [2] [3] [4]
 # bindsym $mod+1 mode "$mode_primary_screen_select"
@@ -161,11 +158,6 @@ bindsym $mod+4 workspace $WS4
 #   bindsym Escape mode "default"
 #   bindsym Return mode "default"
 # }
-
-bindsym $mod+Shift+1 move container to workspace $WS1
-bindsym $mod+Shift+2 move container to workspace $WS2
-bindsym $mod+Shift+3 move container to workspace $WS3
-bindsym $mod+Shift+4 move container to workspace $WS4
 
 # set $mode_primary_screen_move Move Primary
 # bindsym $mod+Shift+1 mode "$mode_primary_screen_move"
@@ -204,14 +196,33 @@ set $WS8 "8"
 # set $WS10 "10:settings"
 
 # set the screens they live on
+# workspace $WS1 output DVI-D-0
+# workspace $WS2 output DVI-D-0
+# workspace $WS3 output DVI-D-0
+# workspace $WS4 output DVI-D-0
 workspace $WS1 output HDMI-0 
 workspace $WS2 output HDMI-0 
 workspace $WS3 output HDMI-0
 workspace $WS4 output HDMI-0
-workspace $WS5 output HDMI-0
-workspace $WS6 output HDMI-0
-workspace $WS7 output HDMI-0
-workspace $WS8 output HDMI-0
+
+# workspace selection
+bindsym $mod+1 workspace $WS1
+bindsym $mod+2 workspace $WS2
+bindsym $mod+3 workspace $WS3
+bindsym $mod+4 workspace $WS4
+bindsym $mod+5 workspace $WS5
+# bindsym $mod+6 workspace $WS6
+# bindsym $mod+7 workspace $WS7
+# bindsym $mod+8 workspace $WS8
+
+bindsym $mod+Shift+1 move container to workspace $WS1
+bindsym $mod+Shift+2 move container to workspace $WS2
+bindsym $mod+Shift+3 move container to workspace $WS3
+bindsym $mod+Shift+4 move container to workspace $WS4
+bindsym $mod+Shift+5 move container to workspace $WS5
+# bindsym $mod+Shift+6 move container to workspace $WS6
+# bindsym $mod+Shift+7 move container to workspace $WS7
+# bindsym $mod+Shift+8 move container to workspace $WS8
 
 # Switch To Workspace
 # bindsym $mod+1 workspace $WS1
@@ -269,7 +280,7 @@ hide_edge_borders smart
 ########### KEYBINDINGS ############
 
 # rofi
-bindsym $mod+p exec "rofi -show run -terminal xterm -no-parse-known-hosts -theme ~/.config/dotfiles/rofi/wal.rasi"
+bindsym $mod+p exec "rofi -dpi 82 -show run -terminal xterm -no-parse-known-hosts -theme ~/.config/dotfiles/rofi/wal.rasi"
 
 # rofi-based emoji picker
 bindsym $mod+e exec "$HOME/.config/dotfiles/emojis/emoji-picker.sh"
@@ -285,3 +296,6 @@ exec_always --no-startup-id "$HOME/.config/dotfiles/startup.sh"
 
 # start imwheel in the background to speed up mouse scrolling (~/.imwheelrc)
 exec_always --no-startup-id "imwheel"
+
+# set resolution on startup only
+exec --no-startup-id i3-msg 'exec $HOME/.screenlayout/current'
