--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,6 +1,6 @@
 # set to 256 colours, xterm
-set -g default-terminal "xterm-256color"
-set-option -ga terminal-overrides ";alacritty; xterm-256color:Tc"
+set -g default-terminal "tmux-256color"
+set-option -sa terminal-overrides ";alacritty; xterm-256color:Tc"
 # set default shell
 # fish
 set-option -g default-shell /usr/local/bin/fish
