Updating to make treesitter behave nicer

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,6 +1,6 @@
 # set to 256 colours, xterm
 set -g default-terminal "tmux-256color"
-set-option -sa terminal-overrides ";alacritty; xterm-256color:Tc"
+set-option -sa terminal-features ',tmux-256color:RGB'
 # set default shell
 # fish
 set-option -g default-shell /usr/local/bin/fish
