--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -3,7 +3,7 @@ set -g default-terminal "tmux-256color"
 set-option -sa terminal-features ',tmux-256color:RGB'
 # set default shell
 # fish
-set-option -g default-shell /usr/local/bin/fish
+set-option -g default-shell /home/adam/.nix-profile/bin/fish
 
 # unbind C-b and set to C-a
 unbind C-b
