Fixing for hyprland and fixing some finer details

--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -27,7 +27,7 @@ history = 1000
 
 [shell]
 args = ["-c", "tmux -u"]
-program = "/home/adam/.nix-profile/bin/fish"
+program = "fish"
 
 [window]
 dynamic_padding = true
