Even firefox works now

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -19,7 +19,7 @@ monitor=HDMI-A-1,2560x1440@60,0x0,1
 # Execute your favorite apps at launch
 # exec-once = waybar & hyprpaper & firefox
 exec = pkill .waybar-wrapped; waybar
-exec = swaybg -i /home/adam/.config/backgrounds/nebula.png
+exec = swaybg -i /home/adam/.config/backgrounds/background
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
@@ -29,6 +29,7 @@ $terminal = alacritty
 $fileManager = thunar
 $menu = rofi -dpi 82 -show run -no-parse-known-hosts -theme ~/.config/dotfiles/rofi/wal.rasi
 $lock = swaylock -f -c 000000
+$browser = web
 
 $bg #282828
 $red #cc241d
@@ -156,7 +157,7 @@ bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating, 
 bind = $mainMod, P, exec, $menu
 # bind = $mainMod, J, togglesplit, # dwindle
-bind = $mainMod, z, exec, firefox
+bind = $mainMod, z, exec, $browser
 bind = ALT_SHIFT, t, exec, $lock
 
 # Move focus with mainMod + arrow keys
