Hyprland improvements, adding more completions

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -26,7 +26,7 @@ exec = swaybg -i /home/adam/.config/backgrounds/background
 
 # Set programs that you use
 $terminal = alacritty
-$fileManager = thunar
+$fileManager = nautilus
 $menu = rofi -dpi 82 -show run -no-parse-known-hosts -theme ~/.config/dotfiles/rofi/wal.rasi
 $lock = swaylock -f -c 000000
 $browser = web
