--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -95,7 +95,7 @@ setw -g window-status-current-format "#[fg=$thm_bg,bg=$thm_blue,bold] #I #[fg=$t
 setw -g window-status-format "#[fg=$thm_gray,bg=$thm_black4] #I #[fg=$thm_gray,bg=$thm_black] #W #F "
 
 set -g status-left-style none
-set -g status-left "#[fg=$thm_bg,bg=$thm_fg] #H #[bg=default] "
+set -g status-left "#[fg=$thm_bg,bg=$thm_yellow] #H #[bg=default] "
 set -g status-left-length 50
 set -g status-right "#[fg=$thm_yellow,bg=$thm_bg] #P #[fg=$thm_bg,bg=$thm_yellow] %H:%M:%S "
 
