--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -20,6 +20,8 @@ monitor=HDMI-A-1,2560x1440@60,0x0,1
 # exec-once = waybar & hyprpaper & firefox
 exec = pkill .waybar-wrapped; waybar
 exec = swaybg -i /home/adam/.config/backgrounds/background
+# set up idle watcher and auto-lock after 5 minutes
+exec = swayidle -w timeout 300 "swaylock -f -c 000000"
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
