--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -11,15 +11,15 @@ TERM = "xterm-256color"
 size = 16
 
 [font.bold]
-family = "JetBrainsMono Nerd Font Mono"
+family = "JetBrainsMono Nerd Font"
 style = "Bold"
 
 [font.italic]
-family = "JetBrainsMono Nerd Font Mono"
+family = "JetBrainsMono Nerd Font"
 style = "Italic"
 
 [font.normal]
-family = "JetBrainsMono Nerd Font Mono"
+family = "JetBrainsMono Nerd Font"
 style = "Medium"
 
 [scrolling]
