--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -21,7 +21,8 @@ monitor=HDMI-A-1,2560x1440@60,0x0,1
 exec = pkill .waybar-wrapped; waybar
 exec = swaybg -i /home/adam/.config/backgrounds/background
 # set up idle watcher and auto-lock after 5 minutes
-exec = swayidle -w timeout 300 "swaylock -f -c 000000"
+# exec = swayidle -w timeout 300 "swaylock -f -c 000000"
+exec = hyprctl setcursor 'capitaine-cursors' 64
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
