--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -118,6 +118,8 @@ dwindle {
     # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
     pseudotile = yes # master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
     preserve_split = yes # you probably want this
+    # always split to the right or bottom
+    force_split = 2
 }
 
 master {
