--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -28,7 +28,8 @@ exec = hyprctl setcursor 'capitaine-cursors' 64
 # source = ~/.config/hypr/myColors.conf
 
 # Set programs that you use
-$terminal = alacritty
+# $terminal = alacritty
+$terminal = kitty tmux -u -2 new-session -A -s main
 $fileManager = nautilus
 $menu = rofi -dpi 82 -show run -no-parse-known-hosts -theme ~/.config/dotfiles/rofi/wal.rasi
 $lock = swaylock -f -c 000000
