Fix kitty shell call

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -7,6 +7,6 @@ sync_to_monitor yes
 enable_audio_bell no
 window_padding_width 15
 hide_window_decorations yes
-shell tmux
+shell .
 
 include themes/gruvbox_dark.conf
