--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,3 +1,6 @@
+macos_quit_when_last_window_closed no
+macos_show_window_title_in none
+
 font_family JetBrainsMono Nerd Font
 font_size 20
 cursor_shape block
