--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,4 +1,4 @@
-macos_quit_when_last_window_closed no
+macos_quit_when_last_window_closed yes
 macos_show_window_title_in none
 
 font_family JetBrainsMono Nerd Font
