Don't use common tmux sessions for hyprland

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -29,7 +29,7 @@ exec = hyprctl setcursor 'capitaine-cursors' 64
 
 # Set programs that you use
 # $terminal = alacritty
-$terminal = kitty tmux -u -2 new-session -A -s main
+$terminal = kitty tmux -u -2 # new-session -A -s main
 $fileManager = nautilus
 $menu = rofi -dpi 82 -show run -no-parse-known-hosts -theme ~/.config/dotfiles/rofi/wal.rasi
 $lock = swaylock -f -c 000000
