Fixing steam's windows and adding screenshotting back to hyprland config

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -150,6 +150,8 @@ device:epic-mouse-v1 {
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 windowrulev2 = nomaximizerequest, class:.* # You'll probably like this.
+# fixing steam's glitchy menus
+windowrulev2 = stayfocused,class:(steam),title:(^$)
 
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
