--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -2,8 +2,7 @@
 set -g default-terminal "tmux-256color"
 set-option -sa terminal-features ',tmux-256color:RGB'
 # set default shell
-# fish
-set-option -g default-shell '/etc/profiles/per-user/adam/bin/fish'
+set-option -g default-command 'fish'
 
 # unbind C-b and set to C-a
 unbind C-b
